--- a/com.weiglewilczek.coop.client/src/com/weiglewilczek/coop/client/ui/messages.properties
+++ b/com.weiglewilczek.coop.client/src/com/weiglewilczek/coop/client/ui/messages.properties
@@ -14,3 +14,12 @@ defaultEntries=Default (50 Entries)
 today=Today
 twoDays=2 Days
 threeDays=3 Days
+rightNow=right now
+secondsAgo={0} seconds ago
+aboutOneMinuteAgo=about 1 minute ago
+aboutNMinutesAgo=about {0} minutes ago
+aboutOneHourAgo=about 1 hour ago
+aboutNHoursAgo=about {0} hours ago
+yesterday=yesterday
+aboutNDaysAgo=about {0} days ago
+overAYearAgo=over a year ago
