--- a/com.weiglewilczek.coop.client/src/com/weiglewilczek/coop/client/ui/messages_de.properties
+++ b/com.weiglewilczek.coop.client/src/com/weiglewilczek/coop/client/ui/messages_de.properties
@@ -14,3 +14,12 @@ defaultEntries=Standard (50 Einträge)
 today=Heute
 twoDays=2 Tage
 threeDays=3 Tage
+rightNow=jetzt
+secondsAgo=vor {0} Sekunden
+aboutOneMinuteAgo=vor ungefähr einer Minute
+aboutNMinutesAgo=vor ungefähr {0} Minuten
+aboutOneHourAgo=vor einer Stunde
+aboutNHoursAgo=vor ungefähr {0} Stunden
+yesterday=Gestern
+aboutNDaysAgo=vor ungefähr {0} Tagen
+overAYearAgo=vor über einem Jahr
