--- a/com.weiglewilczek.coop.client.build.tools/distribute/release_notes.txt
+++ b/com.weiglewilczek.coop.client.build.tools/distribute/release_notes.txt
@@ -1,13 +1,21 @@
 Update:
-Die in Coop eingegebenen Konfigurationen werde gespeichert in:
+Die in Coop eingegebenen Preferences werde gespeichert in:
 CoopClient.app/Contents/MacOS/workspace/.metadata/plugins/org.eclipse.core.runtime/.settings/com.weiglewilczek.coop.client.prefs
-Bei einem Update auf eine andere Programmversion, bitte diese Datei (bzw. dern Ordner org.eclipse.core.runtime) manuell in das neue Programm kopieren.
+Bei einem Update auf eine andere Programmversion, bitte diese Datei (bzw. dern Ordner org.eclipse.core.runtime) manuell in das neue Programm kopieren oder den Usernamen erneut eingeben.
 
 Known Bug:
 Vor dem Start muss dem Owner noch Execution-Rechte für die Datei CoopClient.app/Contents/MacOS/CoopClient hinzugefügt werden.
 Also:
-chmod o+x ....CoopClient.app/Contents/MacOS/CoopClient
+chmod +xw ....CoopClient.app/Contents/MacOS/CoopClient
 
 Release Notes:
 
-RC2:
+Alpha1:
+Funktionsumfang:
+- Login
+- Autologin
+- Laden von Coop-Einträgen
+- Automatische Suche nach neuen/gelöschten Coop-Einträgen
+- Erstellen von Coop-Einträgen
+- Preferences (Suche/Update-Intervall; Anzahl an Einträgen, die initial geladen werden)
+- Speicherung des Passworts mittels equinox secure storage
